[package]
name = "opendut-lea"
description = "Web-UI for administering openDuT."
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
viper = ["opendut-model/viper"]

[dependencies]
opendut-carl-api = { workspace = true, features = ["wasm-client"] }
opendut-auth = { workspace = true, features = ["public_client"] }
opendut-lea-components = { workspace = true }
opendut-model = { workspace = true }


console_error_panic_hook = { workspace = true }
gloo-net = { workspace = true, features = ["json"]}
leptos = { workspace = true, features = ["csr"] }
leptos_oidc =  { workspace = true }
leptos_router = { workspace = true }
leptos-use = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shadow-rs = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "tracing-log"] }
tracing-web = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["js"] }
wasm-bindgen-futures = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true, default-features = true }

[lints]
workspace = true
