[package]
name = "opendut-model"
description = "Communication data types used between openDuT services."
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["json"]
specs = []
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
yaml-specs = ["specs", "yaml"]
json-specs = ["specs", "json"]
viper = ["dep:opendut-viper-rt"]

[dependencies]
opendut-util = { workspace = true, features = ["proto"] }
opendut-viper-rt = { workspace = true, features = ["proto"], optional = true }

base64 = { workspace = true }
brotli = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, optional = true  }
serde_yaml = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
pem = { workspace = true, features = ["serde"] }
prost = { workspace = true }
# Only necessary if using Protobuf well-known types: e.g. google/protobuf/timestamp.proto
prost-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
googletest = { workspace = true }
indoc = { workspace = true }
serde_yaml = { workspace = true }
rstest = { workspace = true }
test-log = { workspace = true }

[build-dependencies]
glob = { workspace = true }
repo_path = { workspace = true }
protobuf-src = { workspace = true }
tonic-prost-build = { workspace = true }

[lints]
workspace = true
