[package]
name = "opendut-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = { workspace = true }
brotli = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
pem = { workspace = true, features = ["serde"]}
prost = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protobuf-src = { workspace = true }

[lints]
workspace = true
