[package]
name = "opendut-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
specs = []
yaml-specs = ["specs", "dep:serde_yaml"]

[dependencies]
base64 = { workspace = true }
brotli = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true, optional = true }
sha1 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
pem = { workspace = true, features = ["serde"]}
prost = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
serde_yaml = { workspace = true }
rstest = { workspace = true }

[build-dependencies]
glob = { workspace = true }
prost-build = { workspace = true }
protobuf-src = { workspace = true }

[lints]
workspace = true
