[package]
name = "opendut-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["json"]
specs = []
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]
yaml-specs = ["specs", "yaml"]
json-specs = ["specs", "json"]

[dependencies]
base64 = { workspace = true }
brotli = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, optional = true  }
serde_yaml = { workspace = true, optional = true }
sha1 = { workspace = true }
strum = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "v5", "serde"] }
pem = { workspace = true, features = ["serde"]}
prost = { workspace = true }
# Only necessary if using Protobuf well-known types: e.g. google/protobuf/timestamp.proto
prost-types = { workspace = true }
strum_macros = "0.25.3"

[dev-dependencies]
anyhow = { workspace = true }
googletest = { workspace = true }
indoc = { workspace = true }
serde_yaml = { workspace = true }
rstest = { workspace = true }
test-log = { workspace = true }

[build-dependencies]
glob = { workspace = true }
prost-build = { workspace = true }
protobuf-src = { workspace = true }

[lints]
workspace = true
