[package]
name = "opendut-util"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
crypto = ["dep:rustls"]
project = []
serde = ["dep:serde"]
settings = ["project", "dep:config", "dep:thiserror"]
telemetry = ["dep:opendut-util-telemetry"]

[dependencies]
opendut-util-core = { workspace = true, features = ["reqwest"] }
opendut-util-telemetry = { workspace = true, optional = true }

config = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

[lints]
workspace = true
