[package]
name = "opendut-util"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
crypto = ["dep:rustls"]
future = ["opendut-util-core/future"]
pem = ["opendut-util-core/pem"]
project = ["opendut-util-core/project"]
proto = ["dep:thiserror"]
reqwest = ["opendut-util-core/reqwest"]
serde = ["dep:serde"]
settings = ["project", "dep:config", "dep:thiserror"]

[dependencies]
opendut-util-core = { workspace = true, optional = true }

config = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls = { workspace = true, optional = true }

[lints]
workspace = true
