[workspace]
members = [
    "viper-cli",
    "viper-py",
    "viper-py/viper-pygen",
    "viper-py/viper-pygen/example",
    "viper-rt",
    "viper-rt/viper-containers",
    "example",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
viper-py = { path = "./viper-py", default-features = false }
viper-pygen = { path = "./viper-py/viper-pygen", default-features = false }
viper-rt = { path = "./viper-rt", default-features = false }
viper-containers = { path = "./viper-rt/viper-containers", default-features = false }

async-trait = { version = "0.1.88" }
bollard = { version = "0.19.*", default-features = false }
clap = { version = "4.5.31"}
console = { version = "0.16.*" }
futures = { version = "0.3.31", default-features = false }
googletest = { version = "0.14.*" }
httpmock = { version = "0.8.2" }
indexmap = { version = "2.*" } # align with 'rustpython-vm'
indicatif = { version = "0.18.*" }
indoc = { version = "2.0.*" }
pin-project-lite = { version = "0.2.*" }
proc-macro2 = { version = "1.0.94" }
quote = { version = "1.0.*" }
reqwest = { version = "0.12.*", default-features = false }
rustpython-vm = { version = "0.4.0" }
serde = { version = "1.0.*" }
syn = { version = "2.0.*" }
tempfile = { version = "3" }
tokio = { version = "1.47.*" }
tokio-stream = { version = "0.1.*" }
tokio-util = { version = "0.7.*" }
toml = { version = "0.9.*"}
tracing = { version = "0.1.*" }
tracing-subscriber = { version = "0.3.*" }
trybuild = { version =  "1.0.104" }
url = { version = "2.5.*" }
