[package]
name = "opendut-vpn"
description = "Client library for talking to the VPN management service."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opendut-model = { workspace = true }

async-trait = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
