[package]
name = "opendut-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dev-dependencies]
opendut-carl = { workspace = true }
opendut-carl-api = { workspace = true }
opendut-edgar = { workspace = true, features = ["integration_testing"] }
opendut-types = { workspace = true }
opendut-util = { workspace = true }

anyhow = { workspace = true }
backon = { workspace = true, features = ["tokio-sleep"] }
config = { workspace = true }
googletest = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing = { workspace = true }
