[package]
name = "opendut-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
opendut-carl = { workspace = true }
opendut-carl-api = { workspace = true }
opendut-edgar = { workspace = true, features = ["integration_testing"] }
opendut-model = { workspace = true }
opendut-util = { workspace = true }

anyhow = { workspace = true }
backon = { workspace = true }
config = { workspace = true }
googletest = { workspace = true }
serde_json = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing = { workspace = true }
