[package]
name = "opendut-ci"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
assert_fs = { workspace = true }
cargo_metadata = { workspace = true }
chrono = { workspace = true, default-features = true }
cicero = { workspace = true, features = ["cache", "commands", "task_venv"] }
clap = { workspace = true, features = ["derive", "string"] }
flate2 = { workspace = true }
fs-err = { workspace = true }
fs_extra = { workspace = true }
predicates = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
shadow-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-spdx = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tar = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi", "tracing-log"] }
walkdir = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true, default-features = true }
