[package]
name = "opendut-ci"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
assert_fs = { workspace = true }
cargo_metadata = { workspace = true }
chrono = { workspace = true, default-features = true }
clap = { workspace = true, features = ["derive", "string"] }
flate2 = { workspace = true }
fs_extra = { workspace = true }
lazy_static = { workspace = true }
predicates = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
sha1 = { workspace = true }
shadow-rs = { workspace = true }
serde_json = { workspace = true }
serde-spdx = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tar = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "ansi", "tracing-log"] }

[build-dependencies]
shadow-rs = { workspace = true }
