[package]
name = "opendut-carl-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["codegen"]
codegen = ["tonic/prost", "tonic/codegen", "tonic-build/prost"]
client = [
    "codegen",
    "dep:config",
    "dep:http",
    "opendut-auth/confidential_client",
    "dep:tower",
    "dep:tracing",
    "tokio",
    "tonic/default",
    "tonic/tls-aws-lc",
    "tonic-build/default",
]
wasm-client = [
    "codegen",
    "dep:jsonwebtoken",
    "dep:leptos",
    "opendut-auth/public_client",
    "dep:tonic-web-wasm-client",
    "dep:tracing",
]

[dependencies]
opendut-auth = { workspace = true, optional = true }
opendut-types = { workspace = true }
opendut-util-core = { workspace = true }

cfg-if = { workspace = true }
config = { workspace = true, optional = true }
http = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
leptos = { workspace = true, optional = true }
prost = { workspace = true }
shadow-rs = { workspace = true, default-features = false, optional = true, features = ["tzdb"] }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tonic = { workspace = true }
tonic-web-wasm-client = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true }

[build-dependencies]
glob = { workspace = true }
protobuf-src = { workspace = true }
tonic-build = { workspace = true }
shadow-rs = { workspace = true, default-features = true }

[dev-dependencies]
googletest = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
