[package]
name = "opendut-carl-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["codegen"]
codegen = ["dep:tonic-prost", "tonic/codegen", "dep:tonic-prost-build"]
client = [
    "codegen",
    "dep:config",
    "dep:http",
    "opendut-auth/confidential_client",
    "dep:tower",
    "dep:tracing",
    "dep:tokio",
    "tonic/channel",
    "tonic/tls-ring",
    "dep:tonic-prost-build",
]
wasm-client = [
    "codegen",
    "dep:jsonwebtoken",
    "dep:leptos",
    "opendut-auth/public_client",
    "dep:tonic-web-wasm-client",
    "dep:tracing",
]
test_suite = ["opendut-model/test_suite"]

[dependencies]
opendut-auth = { workspace = true, optional = true }
opendut-model = { workspace = true }
opendut-util-core = { workspace = true }

cfg-if = { workspace = true }
config = { workspace = true, optional = true }
const_format = { workspace = true }
http = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
leptos = { workspace = true, optional = true }
prost = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tonic = { workspace = true }
tonic-prost = { workspace = true, optional = true }
tonic-web-wasm-client = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true }

[build-dependencies]
glob = { workspace = true }
protobuf-src = { workspace = true }
tonic-prost-build = { workspace = true, optional = true }

[dev-dependencies]
googletest = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
