[package]
name = "opendut-netbird-client-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opendut-types = { workspace = true }

hyper-util = { workspace = true, features = ["tokio"] }
prost = { workspace = true, default-features = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, default-features = true }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
opendut-util = { workspace = true }

cargo_metadata = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tonic-build = { workspace = true, default-features = true }
protobuf-src = { workspace = true }

[lints]
workspace = true
