[package]
name = "opendut-netbird-client-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opendut-model = { workspace = true }

hyper-util = { workspace = true, features = ["tokio"] }
prost = { workspace = true, default-features = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, default-features = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[build-dependencies]
opendut-util = { workspace = true, features = ["project"] }

cargo_metadata = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tonic-prost-build = { workspace = true, default-features = true }
protobuf-src = { workspace = true }

[lints]
workspace = true
