[package]
name = "opendut-edgar-kernel-modules"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nix = { workspace = true, features = ["user"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
