[package]
name = "opendut-edgar-kernel-modules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
nix = { workspace = true, features = ["user"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
