[package]
name = "opendut-restbus-simulation"
version = "0.1.0"
edition.workspace = true                                                                                                                                    
rust-version.workspace = true                                                                                                                               
license.workspace = true                                                                                                                                    

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autosar-data = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
                                                                                                                                                            
[lints]                                                                                                                                                     
workspace = true        
