[package]
name = "opendut-lea-components"
description = "Library of general UI components for use in LEA."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opendut-model = { workspace = true }

chrono = { workspace = true, features = ["clock", "wasmbind"] }
leptos = { workspace = true, features = ["csr"] }
leptos-use = { workspace = true }
slotmap = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
