[package]
name = "opendut-lea-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opendut-types = { workspace = true }

chrono = { workspace = true, features = ["clock", "wasmbind"] }
leptos = { workspace = true, features = ["csr"] }
leptos-use = { workspace = true }
slotmap = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
