[package]
name = "opendut-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
confidential_client = [
    "anyhow",
    "chrono",
    "config",
    "const_format",
    "http",
    "tower",
    "oauth2",
    "pem",
    "tokio",
    "tonic/default",
    "tonic/transport",
    "tonic/tls-ring",
    "tracing",
    "opendut-model",
]
# registration_client requires confidential_client feature
registration_client = [
    "confidential_client",
    "openidconnect",
]
public_client = [
    "chrono",
    "http",
    "leptos",
    "leptos_oidc",
    "tracing",
]

[dependencies]
opendut-util-core = { workspace = true }
opendut-model = { workspace = true, optional = true }

anyhow = { workspace = true, optional = true }
async-trait = { workspace = true }
backon = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true, optional = true, default-features = false, features = ["clock", "serde", "wasmbind"] }
config = { workspace = true, optional = true }
const_format = { workspace = true, optional = true }
http = { workspace = true, optional = true }
leptos =  { workspace = true, optional = true }
leptos_oidc =  { workspace = true, optional = true }
openidconnect = { workspace = true, optional = true, default-features = false }
oauth2 = { workspace = true, default-features = false, optional = true }
pem = { workspace = true, optional = true, features = ["serde"] }
reqwest = { workspace = true, default-features = false, features = ["json", "blocking", "rustls-tls-native-roots"] }
reqwest-middleware = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread"] }
tonic = { workspace = true }
tower = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true }
serde_json = { workspace = true }


[dev-dependencies]
rstest = { workspace = true }
googletest = { workspace = true }
test-with = { workspace = true }
