[package]
name = "opendut-util-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
future = []
pem = ["project", "dep:anyhow", "dep:config", "dep:pem", "dep:tracing"]
project = ["dep:anyhow"]
reqwest = ["pem", "dep:reqwest"]
testing = ["project", "dep:dotenvy"]

[dependencies]
anyhow = { workspace = true, optional = true }
config = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
pem = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[lints]
workspace = true
