[package]
name = "opendut-viper-example"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
opendut-viper-rt = { workspace = true, features = [ "error", "containers" ] }
indoc = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread", "macros" ] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
