[package]
name = "opendut-viper-example"
description = "Example code for using VIPER as a library."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opendut-viper-rt = { workspace = true, features = [ "error", "containers" ] }
indoc = { workspace = true }
tokio = { workspace = true, features = [ "rt-multi-thread", "macros" ] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
