[package]
name = "opendut-viper-py"
description = "Definition of VIPER's Python syntax."
version.workspace = true
edition.workspace = true
license.workspace = true

[features]

[dependencies]
opendut-viper-pygen = { workspace = true }

rustpython-vm = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
