[package]
name = "opendut-viper-rt"
version.workspace = true
edition.workspace = true
license.workspace = true

[features] # All crate features are documented in the `lib.rs` file.
default = ["error"]
error = []
events = []
containers = ["dep:opendut-viper-containers", "opendut-viper-containers/docker"]
file-source = []
git-source = []
http-source = ["dep:reqwest"]
types = []
proto = ["error"]
py = ["types", "dep:opendut-viper-py", "dep:rustpython-vm"]
compile = ["events", "types", "py"]
run = ["compile"]

[dependencies]
opendut-util = { workspace = true, features = ["proto"] }
opendut-viper-py = { workspace = true, optional = true }
opendut-viper-containers = { workspace = true, optional = true }

async-trait = { workspace = true }
futures = { workspace = true, features = ["executor"] }
pin-project-lite = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, optional = true }
rustpython-vm = { workspace = true, optional = true }
tracing = { workspace = true }
url = { workspace = true }


[build-dependencies]
glob = { workspace = true }
protobuf-src = { workspace = true }
tonic-prost-build = { workspace = true }

[dev-dependencies]
opendut-viper-containers = { workspace = true, features = ["mock"] }

googletest = { workspace = true }
httpmock = { workspace = true }
indoc = { workspace = true }
repo_path = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
